<resources>
    <string name="app_name">BlogAppFirebase</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="don_t_have_an_account_register">Don\'t have an Account? Register</string>
    <string name="already_have_an_account_login">Already have An Account?Login</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="upload_to_database">Upload To database</string>
    <string name="logout">logout</string>
    <string name="update">Update</string>
    <string name="enter_title">Enter Title</string>
    <string name="upload_video">Upload Video</string>
</resources>