<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="12dp">

        <ImageView
            android:id="@+id/iv_addproduct_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/add_btn"
            android:contentDescription="@string/app_name"
            />

<EditText
    android:id="@+id/et_product_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginTop="20dp"
    android:inputType="text"
    android:hint="@string/enter_product_name"
    android:background="@drawable/edittext_background"
    android:autofillHints="no" />

<EditText
    android:id="@+id/et_product_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:autofillHints="no"
    android:inputType="text"
    android:layout_marginTop="20dp"
    android:hint="@string/enter_product_description"
    android:background="@drawable/edittext_background"
    />

 <Button
     android:id="@+id/btn_upload_product"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:padding="12dp"
     android:text="@string/upload_to_database"
     />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:text="@string/logout"
        />

</LinearLayout>

</RelativeLayout>
