<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:background="@drawable/edittext_background"
            android:autofillHints="no"
            />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="22dp"
            android:hint="@string/enter_email"
            android:background="@drawable/edittext_background"
            android:autofillHints="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_background"
            android:autofillHints="no" />

        <EditText
            android:id="@+id/et_register_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/enter_confirm_password"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_background"
            android:autofillHints="no"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</RelativeLayout>

