<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

 <EditText
     android:id="@+id/et_login_email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:padding="12dp"
     android:layout_margin="12dp"
     app:layout_constraintBottom_toTopOf="@id/et_loginpassword"
     app:layout_constraintVertical_chainStyle="packed"
     android:hint="@string/enter_email"
     android:background="@drawable/edittext_background"
     android:autofillHints="no"
     android:inputType="textEmailAddress"
     />

 <EditText
     android:id="@+id/et_loginpassword"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:layout_margin="12dp"
     android:hint="@string/enter_password"
     android:inputType="textPassword"
     app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/et_login_email"
     android:background="@drawable/edittext_background"
     android:autofillHints="no"
     />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/et_loginpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:padding="12dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:textStyle="bold"
      android:layout_margin="12dp"
      app:layout_constraintBottom_toTopOf="@id/tv_forgot_password_text"
      app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
      />

  <TextView
      android:id="@+id/tv_forgot_password_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="12dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:textColor="@color/black"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_login"
      android:text="@string/don_t_have_an_account_register"
      />

</androidx.constraintlayout.widget.ConstraintLayout>

